--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\" ",
-    "start": "",
+    "start": "npm run buld && cs server && node server.js",
     "server": "",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
